[project]
name = "sleep-stage-classifier"
version = "0.1.0"
description = "FastAPI service for EEG sleep stage classification with CNN-LSTM training and explainability endpoints."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "numpy>=1.26,<3.0",
  "scipy>=1.12,<2.0",
  "pydantic>=2.7,<3.0",
  "scikit-learn>=1.4,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]
ml = [
  "mne>=1.7,<2.0",
  "tensorflow>=2.16,<2.18",
  "shap>=0.45,<1.0",
  "tf-explain>=0.3,<1.0",
  "matplotlib>=3.8,<4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

